--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
                     <img class="avatar" src="assets/images/yin.jpg">
                 </section>
 
-                <h1 class="name"><strong>意向岗位</strong></h1>
-                <h4 class="info-job"><strong>Java开发工程师</strong> </h4>
+<!--                 <h1 class="name"><strong>意向岗位</strong></h1>
+                <h4 class="info-job"><strong>Java开发工程师</strong> </h4> -->
 
             </section>
 
             <!-- 基本信息 -->
             <section class="profile info-unit">
                 <h2>
-                    <i class="fa fa-user" aria-hidden="true"></i>基本信息</h2>
+                    <i class="fa fa-user" aria-hidden="true"></i>Personal Information</h2>
                 <hr />
                 <ul>
                     <li>
@@ -150,16 +150,16 @@
             <!-- 联系方式 -->
             <section class="contact info-unit">
                 <h2>
-                    <i class="fa fa-phone" aria-hidden="true"></i>联系方式</h2>
+                    <i class="fa fa-phone" aria-hidden="true"></i>Contect</h2>
                 <hr />
                 <ul>
                     <li>
                         <label><i class="fa fa-qq"></i></label>
-                        <a target="_blank">923091621</a>
+                        <a target="_blank">185923193</a>
                     </li>
                     <li>
                         <label><i class="fa fa-envelope"></i></label>
-                        <a href="mailto:hack_hu@163.com" target="_blank">hack_hu@163.comn</a>
+                        <a href="mailto:y.yin@sbb.leidenuniv.nl" target="_blank">y.yin@sbb.leidenuniv.nln</a>
                     </li>
                     <li>
                         <label><i class="fa fa-file-text-o"></i></label>
@@ -175,7 +175,7 @@
             <!-- 教育经历 -->
             <section class="edu info-unit">
                     <h2>
-                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>教育经历</h2>
+                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>Education</h2>
                     <hr />
                     <ul>
                         <li>
