--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                 <hr />
                 <ul>
                     <li>
-                        <label>个人信息</label>
-                        <span>hack-hu / 男 / 23岁</span>
+                        <label>Personal Information</label>
+                        <span>hack-hu / Female / 26 years old</span>
                     </li>
-                    <li>
+<!--                     <li>
                         <label>英语水平</label>
                         <span>CET-4</span>
-                    </li>
+                    </li> -->
 
                 </ul>
             </section>
@@ -161,19 +161,19 @@
                         <label><i class="fa fa-envelope"></i></label>
                         <a href="mailto:y.yin@sbb.leidenuniv.nl" target="_blank">y.yin@sbb.leidenuniv.nln</a>
                     </li>
-                    <li>
+<!--                     <li>
                         <label><i class="fa fa-file-text-o"></i></label>
                         <a href="https://blog.csdn.net/qq_38288847" target="_blank">hack-hu 的博客</a>
-                    </li>
-                    <li>
+                    </li> -->
+<!--                     <li>
                         <label><i class="fa fa-github" aria-hidden="true"></i></label>
                         <a href="https://github.com/hackhu2019" target="_blank">github.com/hackhu2019</a>
-                    </li>
+                    </li> -->
                 </ul>
             </section>
 
-            <!-- 教育经历 -->
-            <section class="edu info-unit">
+            <!-- 教育经历 加入正文中 -->
+<!--             <section class="edu info-unit">
                     <h2>
                         <i class="fa fa-graduation-cap" aria-hidden="true"></i>Education</h2>
                     <hr />
@@ -203,7 +203,7 @@
                     1、 2018 年浙江省优秀毕业生<br />
                     2、 2017 年浙江省政府奖学金 <br />
     
-                </section>
+                </section> -->
             <!-- 个人技能 -->
             <section class="skill info-unit">
                 <h2>
