--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                         <label><i class="fa fa-envelope"></i></label>
                         <a href="mailto:y.yin@sbb.leidenuniv.nl" target="_blank">y.yin@sbb.leidenuniv.nln</a>
                     </li>
-<!--                     <li>
+                    <li>
                         <label><i class="fa fa-file-text-o"></i></label>
-                        <a href="https://blog.csdn.net/qq_38288847" target="_blank">hack-hu 的博客</a>
-                    </li> -->
-<!--                     <li>
+                        <a href="YINYINGWXZH" target="_blank">YINYINGWXZH</a>
+                    </li> 
+                    <li>
                         <label><i class="fa fa-github" aria-hidden="true"></i></label>
-                        <a href="https://github.com/hackhu2019" target="_blank">github.com/hackhu2019</a>
-                    </li> -->
+                        <a href="+31 0683848917" target="_blank">+31 0683848917</a>
+                    </li> 
                 </ul>
             </section>
 
@@ -236,15 +236,16 @@
 
         <section class="main">
 
-            <!-- 专业能力 -->
+            <!-- Education -->
             <section class="work info-unit">
                 <h2>
                     <i class="fa fa-pencil" aria-hidden="true"></i>专业能力</h2>
                 <hr />
-                <p> 掌握计算机网络、操作系统、软件工程基础课程，熟悉常用设计模式（单例模式、工厂模式、原型模式、适配器模式等）
+                <p> 
+                    Science Based Business, Leiden Institute of Advanced Compter Science, Leiden University  (2020.12-)    
                 </p>
                 <p>
-                    熟悉常用数据结构(Array、List、Stack、Queue、Heap、Tree),了解Hash、跳表，熟悉常用的排序算法(冒泡、插入、选择、快排、堆排、归并、桶)
+                    Beijing Institute of Technology熟悉常用数据结构(Array、List、Stack、Queue、Heap、Tree),了解Hash、跳表，熟悉常用的排序算法(冒泡、插入、选择、快排、堆排、归并、桶)
                 </p>
                 <p>
                     熟悉C/Java/C#、理解面向对象思想，掌握Java继承和多态特性。了解JavaWeb常用框架，如Spring、SpringBoot 等。
@@ -363,7 +364,7 @@
 
 
     <footer class="footer">
-        <p> <b>感谢您花时间阅读我的简历，期待能有机会和您共事。</b> </p>
+        <p> <b>Details determine success or failure, attitude decides everything! </b> </p>
     </footer>
 
     <!-- 侧栏 -->
